ready for testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,21 @@
     ],
     "files.associations": {
         "*.yaml": "home-assistant"
+    }, 
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
     },
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
+    "python.formatting.provider": "black",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportMissingTypeStubs": "none"
+    },
+}
 }
