--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ package_dir =
     =src
 zip_safe = False
 install_requires =
-    modbus_event_connect ~=0.1
+    modbus_event_connect @ git+https://github.com/HairingX/modbus_event_connect
 
 [options.packages.find]
 where=src
